src/scss/_global.scss
@import "vars";

html,
body {
    background-color: $--navy;
    font-family: $--font-mono;
    scroll-behavior: smooth;
    user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;

    &::-webkit-scrollbar {
        background-color: $--navy;
        width: 5px;
        direction: ltr;
    }

    &::-webkit-scrollbar-thumb {
        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
        background-color: $--green;
        border-radius: 10px;
    }
}

//canvas background

#c {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 0;
    opacity: 0.5;
}

.fade1 {
    animation: $--fadein 500ms;
    -webkit-animation: $--fadein 500ms;
    -moz-animation: $--fadein 500ms;
    -ms-animation: $--fadein 500ms;
    -o-animation: $--fadein 500ms;
}

.fade2 {
    animation: $--fadein 1000ms;
    -webkit-animation: $--fadein 1000ms;
    -moz-animation: $--fadein 1000ms;
    -ms-animation: $--fadein 1000ms;
    -o-animation: $--fadein 1000ms;
}

.fade3 {
    animation: $--fadein 1500ms;
    -webkit-animation: $--fadein 1500ms;
    -moz-animation: $--fadein 1500ms;
    -ms-animation: $--fadein 1500ms;
    -o-animation: $--fadein 1500ms;

}

.fade4 {
    animation: $--fadein 2000ms;
    -webkit-animation: $--fadein 2000ms;
    -moz-animation: $--fadein 2000ms;
    -ms-animation: $--fadein 2000ms;
    -o-animation: $--fadein 2000ms;
}

.fade5 {
    animation: $--fadein 2500ms;
    -webkit-animation: $--fadein 2500ms;
    -moz-animation: $--fadein 2500ms;
    -ms-animation: $--fadein 2500ms;
    -o-animation: $--fadein 2500ms;
}

.barfade {
    animation: $--barfade 5000ms ease;
    -webkit-animation: $--barfade 5000ms ease;
    -moz-animation: $--barfade 5000ms ease;
    -ms-animation: $--barfade 5000ms ease;
    -o-animation: $--barfade 5000ms ease;
}

.playerfade {
    animation: $--playerfade 5000ms ease;
    -webkit-animation: $--playerfade 5000ms ease;
    -moz-animation: $--playerfade 5000ms ease;
    -ms-animation: $--playerfade 5000ms ease;
    -o-animation: $--playerfade 5000ms ease;
}

.superfade {
    animation: $--superfade 5000ms;
    -webkit-animation: $--superfade 5000ms;
    -moz-animation: $--superfade 5000ms;
    -ms-animation: $--superfade 5000ms;
    -o-animation: $--superfade 5000ms;
}

